infra/k8s/album-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: album-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: album
  template:
    metadata:
      labels:
        app: album
    spec:
      containers:
        - name: album
          # image: us.gcr.io/my-love-455022/album-service
          image: 076161/album-service
          ports:
            - containerPort: 4007
---
apiVersion: v1
kind: Service
metadata:
  name: album-srv
spec:
  selector:
    app: album
  ports:
    - name: album
      protocol: TCP
      port: 4007
      targetPort: 4007
