infra/k8s/daily-journey-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily-journey-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daily-journey
  template:
    metadata:
      labels:
        app: daily-journey
    spec:
      containers:
        - name: daily-journey
          # image: us.gcr.io/my-love-455022/love-daily-journey
          image: 076161/love-daily-journey
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: daily-journey-srv
spec:
  selector:
    app: daily-journey
  ports:
    - name: daily-journey
      protocol: TCP
      port: 4003
      targetPort: 4003
