infra/k8s/event-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          # image: us.gcr.io/my-love-455022/love-event
          image: 076161/love-event
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: event-srv
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 4000
      targetPort: 4000
