infra/k8s/photo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo
  template:
    metadata:
      labels:
        app: photo
    spec:
      containers:
        - name: photo
          # image: us.gcr.io/my-love-455022/love-photo
          image: 076161/love-photo
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: photo-srv
spec:
  selector:
    app: photo
  ports:
    - name: photo
      protocol: TCP
      port: 4002
      targetPort: 4002
