infra/k8s/timeline-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline
  template:
    metadata:
      labels:
        app: timeline
    spec:
      containers:
        - name: timeline
          # image: us.gcr.io/my-love-455022/timeline-service
          image: 076161/timeline-service
          ports:
            - containerPort: 4009
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-srv
spec:
  selector:
    app: timeline
  ports:
    - name: timeline
      protocol: TCP
      port: 4009
      targetPort: 4009
