infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  ingressClassName: nginx
  rules:
    - host: mylove.dev
      http:
        paths:
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /photo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: photo-srv
                port:
                  number: 4002
          - path: /album(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: album-srv
                port:
                  number: 4007
          - path: /event(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-srv
                port:
                  number: 4000
          - path: /daily-journey(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: daily-journey-srv
                port:
                  number: 4003
          - path: /timeline(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: timeline-srv
                port:
                  number: 4009
